// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Person gets person from email 1`] = `
Array [
  Array [
    "People?%24filter=Email%20eq%20%27isaac.hardy%40newspring.cc%27",
    Object {},
    Object {},
  ],
]
`;

exports[`Person gets person from email 2`] = `
Object {
  "email": "isaac.hardy@newspring.cc",
}
`;

exports[`Person gets person from id 1`] = `
Array [
  Array [
    "People/51",
    Object {},
    Object {},
  ],
]
`;

exports[`Person gets person from id 2`] = `
Object {
  "id": 51,
}
`;

exports[`Person updates a user's profile attributes 1`] = `Array []`;

exports[`Person updates a user's profile attributes 2`] = `Array []`;

exports[`Person uploads a user's profile picture 1`] = `
Object {
  "firstName": "Vincent",
  "id": 51,
  "lastName": "Wilson",
}
`;

exports[`Person uploads a user's profile picture 2`] = `
Array [
  Array [
    "https://apollosrock.newspring.cc/api/BinaryFiles/Upload?binaryFileTypeId=5",
    Object {
      "body": FormData {
        "_boundary": "--------------------------",
        "_currentStream": null,
        "_overheadLength": 103,
        "_released": false,
        "_streams": Array [
          "----------------------------
Content-Disposition: form-data; name=\\"file\\"

",
          "123",
          [Function],
        ],
        "_valueLength": 456,
        "_valuesToMeasure": Array [],
        "dataSize": 0,
        "maxDataSize": 2097152,
        "pauseStreams": true,
        "readable": true,
        "writable": false,
      },
      "headers": Object {
        "Authorization-Token": "some-rock-token",
        "content-type": "multipart/form-data; boundary=--------------------------",
      },
      "method": "POST",
    },
  ],
]
`;

exports[`Person uploads a user's profile picture 3`] = `
Object {
  "0": Array [
    Array [
      Object {
        "field": "PhotoId",
        "value": "245",
      },
    ],
  ],
}
`;
